fix desktop not visible text on gameDescr

--- a/src/css/gameDescription.css
+++ b/src/css/gameDescription.css
@@ -154,6 +154,10 @@
     padding: 0;
   }
   .gamedescr-descr2 {
+    max-height: none;
+    opacity: 1;
+    visibility: visible;
+    transform: none;
     margin-top: 40px;
   }
 }
